feat: added new admin metrics
